gccida/c3/convert_and_check
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1259:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1260:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1291:32: error: expected expression
: section_name == ( tree_node *)*( &global_trees + 5) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1291:21: error: use of undeclared identifier 'tree_node'
: section_name == ( tree_node *)*( &global_trees + 5) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1292:23: error: expected expression
? ( v8 = ( tree_node *)*( &global_trees + 10)) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1292:12: error: use of undeclared identifier 'tree_node'
? ( v8 = ( tree_node *)*( &global_trees + 10)) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1293:32: error: expected expression
: section_name == ( tree_node *)*( &global_trees + 4) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1293:21: error: use of undeclared identifier 'tree_node'
: section_name == ( tree_node *)*( &global_trees + 4) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1294:23: error: expected expression
? ( v8 = ( tree_node *)*( &global_trees + 9)) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1294:12: error: use of undeclared identifier 'tree_node'
? ( v8 = ( tree_node *)*( &global_trees + 9)) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1295:32: error: expected expression
: section_name == ( tree_node *)*( &global_trees + 3) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1295:21: error: use of undeclared identifier 'tree_node'
: section_name == ( tree_node *)*( &global_trees + 3) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1296:23: error: expected expression
? ( v8 = ( tree_node *)*( &global_trees + 8)) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1296:12: error: use of undeclared identifier 'tree_node'
? ( v8 = ( tree_node *)*( &global_trees + 8)) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1297:32: error: expected expression
: section_name == ( tree_node *)*( &global_trees + 2) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1297:21: error: use of undeclared identifier 'tree_node'
: section_name == ( tree_node *)*( &global_trees + 2) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1298:23: error: expected expression
? ( v8 = ( tree_node *)*( &global_trees + 7)) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1298:12: error: use of undeclared identifier 'tree_node'
? ( v8 = ( tree_node *)*( &global_trees + 7)) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/c-common.c:1299:32: error: expected expression
: section_name == ( tree_node *)*( &global_trees + 1) 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/convert_and_check/src/obj/c-common.o] Error 1
